--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-mirai-api-http",
-  "version": "1.0.0",
-  "main": "src/app.ts",
+  "version": "1.0.3",
+  "main": "dist/app.js",
   "repository": "git@github.com:litfa/typescript-mirai-api-http.git",
   "author": "ltfei <ltfei@ltfei.cn>",
   "license": "MIT",
