--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "dev": "nodemon src/app.ts",
     "dev:dev": "code .|wt -d ./|yarn dev",
     "build": "tsc",
-    "publish": "yarn build | npm publish"
+    "publish": "yarn build | npm publish",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
   },
