--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,9 @@
     "baseUrl": ".",
     "declaration": true,
     "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ]
-    }
+      "*": ["node_modules/*", "src/types/*"]
+    },
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
